<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="6.0dip">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FD932A"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            app:cardBackgroundColor="#FFEEE0"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="40.0dip"
                    android:layout_weight="1"
                    android:layout_height="30.0dip"
                    android:contentDescription="@string/myflag"
                    android:src="@drawable/united" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12.0dip"
                        android:layout_toRightOf="@+id/img"
                        android:text="@string/usd"
                        android:textColor="#ff000000"
                        android:textSize="12.0sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt1"
                        android:layout_marginLeft="12.0dip"
                        android:layout_toRightOf="@+id/img"
                        android:text="@string/united_states_dollar"
                        android:textColor="#ff000000"
                        android:textSize="12.0sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="70.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/txt2"
                    android:gravity="end"
                    android:text="@string/_1_0"
                    android:textColor="#ff000000"
                    android:textSize="18.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>
</RelativeLayout>