<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="12.0dip"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardBackgroundColor="#FD932A"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            app:cardBackgroundColor="#FFEEE0"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/fromTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:layout_margin="2dp"
                    android:textSize="12.0sp" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="150.0dip"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fromTxt"
                    android:layout_margin="5dp"
                     />

                <TextView
                    android:id="@+id/toText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="122.0dip"
                    android:layout_marginTop="2dp"
                    android:layout_toRightOf="@+id/fromTxt"
                    android:text="@string/to"
                    android:textSize="12.0sp" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="150.0dip"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toText"
                    android:layout_margin="5dp"
                    android:layout_toRightOf="@+id/spinner1" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ligne"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:color="#FD932A"
            android:contentDescription="@string/divider"
            android:paddingTop="2.0dip"
            android:paddingBottom="2.0dip"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_textfield" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/ligne"
                android:layout_margin="2dp"
                app:cardBackgroundColor="#FD932A"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    app:cardBackgroundColor="#FFFFFF"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:weightSum="2">

                        <ImageView
                            android:id="@+id/c_f_flag"
                            android:layout_width="40.0dip"
                            android:layout_height="30.0dip"
                            android:layout_weight="1"
                            android:contentDescription="@string/flag1"
                            android:src="@drawable/united" />


                        <TextView
                            android:id="@+id/c_f_text"
                            android:layout_width="180.0dip"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_toRightOf="@+id/c_f_flag"
                            android:layout_weight="1"
                            android:text="@string/united_states_dollar1"
                            android:textColor="#ff000000" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                app:cardBackgroundColor="#FD932A"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    app:cardBackgroundColor="#FFEEE0"
                    app:cardCornerRadius="5dp">

                    <EditText
                        android:id="@+id/edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_toRightOf="@+id/c_f_text"
                        android:inputType="numberDecimal"
                        android:maxLength="30" />
                </android.support.v7.widget.CardView>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <ImageView
            android:id="@+id/c_f_symbol"
            android:layout_width="30.0dip"
            android:layout_height="30.0dip"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/symbol"
            android:src="@drawable/symbol" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/ligne"
                android:layout_margin="2dp"
                app:cardBackgroundColor="#FD932A"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    app:cardBackgroundColor="#FFFFFF"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:weightSum="2">

                        <ImageView
                            android:id="@+id/c_f_flag2"
                            android:layout_width="40.0dip"
                            android:layout_height="30.0dip"
                            android:layout_below="@+id/c_f_symbol"
                            android:contentDescription="@string/flag2"
                            android:layout_weight="1"
                            android:src="@drawable/united" />

                        <TextView
                            android:id="@+id/c_f_text2"
                            android:layout_width="180.0dip"
                            android:layout_margin="5dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/c_f_symbol"
                            android:layout_weight="1"
                            android:layout_toRightOf="@+id/c_f_flag2"
                            android:text="@string/united_states_dollar1"
                            android:textColor="#ff000000" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                app:cardBackgroundColor="#FD932A"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    app:cardBackgroundColor="#FFEEE0"
                    app:cardCornerRadius="5dp">

                    <TextView
                        android:id="@+id/txt_result"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:maxLength="30"
                        android:text=""
                        android:layout_margin="3dp"
                        android:textColor="#ff000000"
                        android:textSize="18.0sp"
                        android:textStyle="bold" />
                </android.support.v7.widget.CardView>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/convertButton"
            android:layout_width="100.0dip"
            android:layout_height="36.0dip"
            android:layout_below="@+id/txt_result"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="30.0dip"
            android:background="#FD932A"
            android:text="@string/convert"
            android:textColor="#ffffffff" />
    </LinearLayout>


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admob_banner_id">
    </com.google.android.gms.ads.AdView>


</LinearLayout>